--- a/src/Microsoft.AspNet.SignalR.Client/Resources.resx
+++ b/src/Microsoft.AspNet.SignalR.Client/Resources.resx
@@ -195,4 +195,7 @@
   <data name="Error_AspNetCoreServerDetected" xml:space="preserve">
     <value>Detected a connection attempt to an ASP.NET Core SignalR Server. This client only supports connecting to an ASP.NET SignalR Server. See https://aka.ms/signalr-core-differences for details.</value>
   </data>
+  <data name="Error_TransportDisconnectedBeforeConnectionFullyInitialized" xml:space="preserve">
+    <value>The transport disconnected before the connection could be fully initialized.</value>
+  </data>
 </root>
